# tuneperfect

./: .dockerignore  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Caddyfile  LICENSE  README.md  biome.json  docker-compose.dev.yml  docker-compose.yaml  package.json  traefik.yml  turbo.json
.github/workflows/: ci.yaml  deploy-helm.yaml  deploy-kubernetes.yaml  docker-build-api.yaml  docker-build-app.yaml  docker-build-web.yaml  draft-release.yaml  release-tauri.yml  release.yaml  tauri-build-game.yaml
apps/api/: .env.example  AGENTS.md  Dockerfile  build.ts  drizzle.config.ts  package.json
apps/api/drizzle/: 0000_lumpy_cyclops.sql  0000_outstanding_dazzler.sql  0000_wise_hobgoblin.sql  0000_workable_eddie_brock.sql  0001_numerous_the_renegades.sql  0001_thankful_warlock.sql  0002_lame_celestials.sql  0002_lying_giant_girl.sql  0003_normal_maelstrom.sql  0007_public_speedball.sql
apps/api/drizzle/20250428103044_lumpy_cyclops/: snapshot.json
apps/api/drizzle/20250509115948_numerous_the_renegades/: snapshot.json
apps/api/drizzle/20250509132939_lame_celestials/: snapshot.json
apps/api/drizzle/20250605101859_normal_maelstrom/: snapshot.json
apps/api/drizzle/20250605151417_tired_steel_serpent/: migration.sql  snapshot.json
apps/api/drizzle/20250605194100_chief_puff_adder/: migration.sql  snapshot.json
apps/api/drizzle/20250812154029_mute_venom/: migration.sql  snapshot.json
apps/api/drizzle/20250813102708_public_speedball/: snapshot.json
apps/api/drizzle/20260612230319_fk_indexes/: migration.sql  snapshot.json
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json
apps/api/src/: base.ts  index.ts  trpc.ts  types.ts
apps/api/src/auth/: jobs.ts  middleware.ts  models.ts  router.test.ts  router.ts  service.test.ts  service.ts
apps/api/src/club/: jobs.ts  models.ts  router.test.ts  router.ts  service.ts
apps/api/src/config/: email.ts  env.ts
apps/api/src/highscore/: router.ts  service.ts
apps/api/src/jobs/: cleanup.ts
apps/api/src/lib/: jobs.ts  logger.ts  posthog.ts  redis.ts
apps/api/src/lobby/: jobs.ts  middleware.ts  models.ts  router.test.ts  router.ts  service.test.ts  service.ts
apps/api/src/oauth/: router.ts
apps/api/src/signaling/: models.ts  publisher.ts  router.test.ts  router.ts
apps/api/src/update/: router.ts  service.test.ts  service.ts
apps/api/src/user/: models.ts  router.test.ts  router.ts  service.ts
apps/api/src/utils/: array.test.ts  array.ts  cookie.ts  cors.ts  db.ts  security.test.ts  security.ts  try-catch.test.ts  try-catch.ts
apps/api/src/webrtc/: router.ts
apps/api/test/: helpers.ts  setup.ts
apps/app/: .env.example  AGENTS.md  Dockerfile  README.md  index.html  package.json  vite.config.js
apps/app/docker/: entrypoint.sh
apps/app/public/: manifest.json
apps/app/src/: main.tsx  routeTree.gen.ts  styles.css
apps/app/src/components/: discord-login.tsx  footer.tsx  google-login.tsx  header.tsx  nav-items.tsx
apps/app/src/contexts/: game-client.tsx
apps/app/src/hooks/: use-song-search.ts
apps/app/src/i18n/: de.ts  en.ts
apps/app/src/lib/: auth.ts  config.ts  dialog.tsx  error.ts  game-query.ts  i18n.ts  orpc.ts  posthog.ts  queries.ts  toast.tsx  trpc.ts
apps/app/src/routes/: __root.tsx  _auth.tsx  _no-auth.tsx
apps/app/src/stores/: connection.ts  songs.ts  webrtc.ts
apps/game/: .env.example  AGENTS.md  package.json  tsconfig.json  vite.config.js
apps/game/src/: bindings.ts  main.tsx  routeTree.gen.ts  styles.css
apps/game/src-tauri/: Cargo.toml  tauri.conf.json
apps/game/src-tauri/capabilities/: default.json  desktop.json
apps/game/src-tauri/icons/: icon.icns
apps/game/src-tauri/src/: error.rs  lib.rs  media_server.rs
apps/game/src-tauri/src/audio/: device.rs  input.rs  mod.rs  output.rs  processor.rs  recorder.rs  resampler.rs  types.rs
apps/game/src-tauri/src/commands/: meta.rs  microphones.rs  mod.rs  pitch.rs  songs.rs
apps/game/src-tauri/src/ultrastar/: filesystem.rs  meta.rs  mod.rs  parser.rs  song.rs
apps/game/src-tauri/src/usdb/: client.rs  commands.rs  mod.rs  models.rs  parser.rs
apps/game/src-tauri/src/webrtc/: commands.rs  host.rs  mod.rs
apps/game/src/components/: highscore-list.tsx  (+11 more)
apps/web/: .env.example  .gitignore  AGENTS.md  Dockerfile  app.config.timestamp_1748437254155.js  app.config.ts  package.json  vite.config.ts
apps/web/src/: routeTree.gen.ts  router.tsx  ssr.tsx  styles.css
helm/tuneperfect/: .helmignore  Chart.yaml  values.yaml
helm/tuneperfect/templates/: NOTES.txt  _helpers.tpl  coturn-configmap.yaml  coturn-deployment.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
plans/: 001-stop-leaking-password-hashes-in-lobby-responses.md  002-validate-lobby-club-selection-and-trim-leaderboard-payload.md  003-fix-cookie-max-age-milliseconds.md  004-gate-ci-on-tests-and-typecheck.md  005-add-foreign-key-indexes.md  README.md
(+226 files in other folders)
