[package]
name = "tuneperfect_game"
version = "0.0.33"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tuneperfect_game_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-persisted-scope = "2"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-fs = "2.4.0"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
thiserror = "2"
lofty = "0"
cpal = "0.17"
ringbuf = "0"
dywapitchtrack = "0.2.0"
rubato = "0.16"
tauri-plugin-shell = "2.3.0"
tauri-plugin-process = "2.3.0"
# Media server dependencies
http = "1.0"
http-range = "0.1"
percent-encoding = "2.3"
tauri-utils = "2.5.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-log = "2.6.0"
log = "0.4"
tauri-plugin-os = "2"
md5 = "0.7"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
dunce = "1.0.5"
urlencoding = "2.1.3"
unicode-normalization = "0.1"
encoding_rs = "0.8"
chardetng = "0.1"
num_cpus = "1.16"
semver = "1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.4.0"
tauri-plugin-single-instance = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.3.0"
